gcc/testsuite/algol68/compile/error-pragmat-1.a68
{ dg-error "unrecognized pragmat" } pr invalid Foo in "module" pr

begin prio // = 8;
      op (int,int)int // = lala;
      proc lala = (int a, b) int: a + b;
      proc void jeje = skip;
      skip
end
